--- a/example/Creating/Makefile
+++ b/example/Creating/Makefile
@@ -65,7 +65,7 @@ LIBS	:= -lSimpleIniParser -lnx
 # list of directories containing libraries, this must be the top level containing
 # include and lib
 #---------------------------------------------------------------------------------
-LIBDIRS	:= $(PORTLIBS) $(LIBNX)
+LIBDIRS	:= $(PORTLIBS) $(LIBNX) $(CURDIR)/../../
 
 
 #---------------------------------------------------------------------------------
@@ -162,6 +162,7 @@ all: $(BUILD)
 
 $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
+	@$(MAKE) -C $(CURDIR)/../.. -f $(CURDIR)/../../Makefile
 	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
 
 #---------------------------------------------------------------------------------
