--- a/example/Editing/romfs/config.ini
+++ b/example/Editing/romfs/config.ini
@@ -1,19 +1,21 @@
+# Sample Config
+global_setting=1
+; Comments
+global_setting_two=2
+
 [config]
 autoboot=1
 autoboot_list=0
 bootwait=5
 customlogo=1
 verification=1
-backlight=100
-autohosoff=0
-autonogc=1
 
 {AtlasNX/Kosmos}
 
 ; Custom Firmwares
 [CFW]
-fss0=atmosphere/fusee-secondary.bin
 kip1patch=nosigchk
+# Option Comment Test
 atmosphere=1
 logopath=bootloader/bootlogo1.bmp
 logopath=bootloader/bootlogo2.bmp
