🎉 Updated copyright, removed unnecessary Switch code, and updated makefiles.

--- a/example/Magic/Makefile
+++ b/example/Magic/Makefile
@@ -43,14 +43,14 @@ SOURCES		:=	source
 DATA		:=	data
 INCLUDES	:=	include
 
-APP_TITLE	:= SimpleIniParser Magic Example
+APP_TITLE	:= Simple INI Parser Magic Example
 APP_AUTHOR	:= Nichole Mattera
-APP_VERSION	:= 2.0.1
+APP_VERSION	:= 2.1.1
 
 #---------------------------------------------------------------------------------
 # options for code generation
 #---------------------------------------------------------------------------------
-ARCH	:=	-march=armv8-a -mtune=cortex-a57 -mtp=soft -fPIE
+ARCH	:=	-march=armv8-a+crc+crypto -mtune=cortex-a57 -mtp=soft -fPIE
 
 CFLAGS	:=	-g -Wall -O2 -ffunction-sections \
 			$(ARCH) $(DEFINES)
@@ -63,11 +63,6 @@ ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=$(DEVKITPRO)/libnx/switch.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
 
 LIBS	:= -lSimpleIniParser -lnx
-
-ifneq (,$(shell which ccache))
-	CXX		:=	$(shell which ccache) $(CXX)
-	CC		:=	$(shell which ccache) $(CC)
-endif
 
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
