--- a/example/Reading/Makefile
+++ b/example/Reading/Makefile
@@ -44,14 +44,14 @@ DATA		:=	data
 INCLUDES	:=	include
 ROMFS		:=	romfs
 
-APP_TITLE	:= SimpleIniParser Reading Example
+APP_TITLE	:= Simple INI Parser Reading Example
 APP_AUTHOR	:= Nichole Mattera
-APP_VERSION	:= 2.0.1
+APP_VERSION	:= 2.1.1
 
 #---------------------------------------------------------------------------------
 # options for code generation
 #---------------------------------------------------------------------------------
-ARCH	:=	-march=armv8-a -mtune=cortex-a57 -mtp=soft -fPIE
+ARCH	:=	-march=armv8-a+crc+crypto -mtune=cortex-a57 -mtp=soft -fPIE
 
 CFLAGS	:=	-g -Wall -O2 -ffunction-sections \
 			$(ARCH) $(DEFINES)
@@ -64,11 +64,6 @@ ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=$(DEVKITPRO)/libnx/switch.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
 
 LIBS	:= -lSimpleIniParser -lnx
-
-ifneq (,$(shell which ccache))
-	CXX		:=	$(shell which ccache) $(CXX)
-	CC		:=	$(shell which ccache) $(CC)
-endif
 
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
