--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-pkg
-src
-debug
-example/**/build
-example/**/*.elf
-example/**/*.nacp
-example/**/*.nro
-release
-lib
-.vscode
-*.tar.bz2
-*.tar.xz
-*.tar.gz
+build
+build-nx
